# stdlib-test

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile  Makefile.ci  README.md  coq-stdlib.opam  coq-stdlib.opam.template  default.nix  dune-project  rocq-stdlib.opam  rocq-stdlib.opam.template
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: basic-checks.yml  nix-action-coq-9.0.yml  nix-action-coq-master.yml  nix-action-rocq-9.0.yml  nix-action-rocq-master.yml
.nix/: config.nix  coq-nix-toolbox.nix
dev/: lint-commits.sh  lint-repository.sh  with-rocq-wrap.sh
dev/ci/: ci-common.sh
dev/doc/: README-CI.md  structure.md
dev/tools/: check-all.sh  check-duplicate-files.sh  check-make-sync.sh  depends-rm-loops.awk  gen-dune.sh  make-changelog.sh  make-depends.sh
doc/: README.md  dune
doc/changelog/: README.md
doc/sphinx/: changes.rst  conf.py  index.html.rst  index.latex.rst
doc/stdlib/: depends  dune  (+4 more)
test-suite/: Makefile
theories/: Make.all  Make.arith  Make.arith-base  Make.bool  Make.classes  Make.classical-logic  Make.compat  Make.corelib-wrapper  Make.derive  Make.extraction  Make.extraction-base  Make.field  Make.fmaps-fsets-msets  Make.funind  Make.lia  Make.list  Make.lists  Make.logic  Make.lqa  Make.narith  Make.narith-base  Make.nsatz  Make.orders-ex  Make.positive  Make.primitive-array  Make.primitive-floats  Make.primitive-int  Make.primitive-string  Make.program  Make.qarith  Make.qarith-base  Make.reals  Make.relations  Make.ring  Make.rtauto  Make.sets  Make.sorting  Make.streams  Make.string  Make.strings  (+8 more)
vernac/: loadpath.ml
(+1017 files in other folders)
